src/objects/SBQQ__ConfigurationRule__c.object
<CustomObject>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleExternalId__c</fullName>
        <formula>SBQQ__ProductRule__r.cpqma_ExternalId__c</formula>
        <label>RuleExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureExternalId__c</fullName>
        <formula>SBQQ__ProductFeature__r.cpqma_ExternalId__c</formula>
        <label>FeatureExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductExternalId__c</fullName>
        <formula>SBQQ__Product__r.cpqma_ExternalId__c</formula>
        <label>ProductExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>